--- a/code_challenge_1/standard.css
+++ b/code_challenge_1/standard.css
@@ -1,13 +1,13 @@
 body {
-background-color: beige;
+/* background-color: beige; */
 margin: 0;
 }
 nav {
-background-color: black;
+background-color: blue;
 display: flex;
 justify-content: space-around;
 }
 a {
-color: #f0f0f0;
+color: cyan;
 text-decoration: none;
 }
