--- a/code_challenge_1/standard.css
+++ b/code_challenge_1/standard.css
@@ -4,7 +4,7 @@ body {
 nav {
 background-color: blue;
 display: flex;
-justify-content: space-around;
+justify-content: space-between
 }
 a {
 color: cyan;
