--- a/code_challenge_1/standard.css
+++ b/code_challenge_1/standard.css
@@ -1,11 +1,13 @@
-body {
-/* background-color: beige; */
-}
+/* body {
+	 background-color: beige; 
+} */
+
 nav {
-background-color: blue;
-display: flex;
-justify-content: space-between
+	background-color: blue;
+	display: flex;
+	justify-content: space-between;
 }
+
 a {
-color: cyan;
+	color: cyan;
 }
