--- a/twinfeats/css/standard.css
+++ b/twinfeats/css/standard.css
@@ -1,13 +1,31 @@
+html {
+	font-family: 'Open Sans', sans-serif;
+	font-size: x-large;
+}
+
 body {
-background-color: beige;
-margin: 0;
+	/* background-color: beige; */
+	margin: 0;
 }
+
 nav {
-background-color: black;
-display: flex;
-justify-content: space-around;
+	background-color: black;
+	display: flex;
+	justify-content: space-around;
+	padding: .25em;
+
 }
+
 a {
-color: #f0f0f0;
-text-decoration: none;
+	color: #f0f0f0;
+	text-decoration: none;
+}
+
+article {
+	background-image: url(/2023-may-foundations/twinfeats/css/assets/background.jpg);
+	width: 100%;
+	height: 100vh;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
 }
